<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/txtSignInHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_in_text"
        android:textSize="@dimen/text_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtSignInEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_header_spacing"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSignInHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtSignInHeader" />

    <EditText
        android:id="@+id/edtSignInPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtSignInEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtSignInEmail" />

    <LinearLayout
        android:id="@+id/lohBtnSignInSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_text_spacing"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/edtSignInPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtSignInPassword">

        <Button
            android:id="@+id/btnSignInSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            app:layout_constraintStart_toStartOf="@+id/edtSignInPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtSignInPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lohBtnSignInSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_text_spacing"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/edtSignInPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtSignInPassword">

        <Button
            android:id="@+id/btnSignInSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_in_text"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="309dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lohPgbSignInSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_text_spacing"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSignInPassword">

        <ProgressBar
            android:id="@+id/pgbSignInSignIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="220dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>