<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/txtSignUpHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_up_text"
        android:textSize="@dimen/text_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtSignUpUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_header_spacing"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpHeader" />

    <EditText
        android:id="@+id/edtSignUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtSignUpUserName"
        app:layout_constraintTop_toBottomOf="@+id/edtSignUpUserName" />

    <EditText
        android:id="@+id/edtSignUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtSignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtSignUpEmail" />

    <LinearLayout
        android:id="@+id/lohBtnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_text_spacing"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/edtSignUpPassword"
        app:layout_constraintStart_toStartOf="@+id/edtSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtSignUpPassword">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up_text"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            app:layout_constraintEnd_toEndOf="@+id/edtSignUpPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtSignUpPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtSignUpPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lohPgbSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_text_spacing"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/edtSignUpPassword"
        app:layout_constraintStart_toStartOf="@+id/edtSignUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtSignUpPassword">

        <ProgressBar
            android:id="@+id/pgbSignUp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="@+id/edtSignUpPassword"
            app:layout_constraintStart_toStartOf="@+id/edtSignUpPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtSignUpPassword" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>